# semantify

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.py  semantify.py  test_semantify.py
examples/astrojs/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json  run_semantify.sh  tailwind.config.cjs
examples/astrojs/src/components/icons/: ReadingTime.astro
examples/astrojs/src/content/: config.ts
examples/astrojs/src/content/blog/octopuses-and-coral-reefs/: index.mdx
examples/astrojs/src/content/blog/octopuses-diet/: index.mdx
examples/astrojs/src/content/blog/octopuses-habitats/: index.mdx
examples/astrojs/src/content/blog/pangolins-diet/: index.mdx
examples/astrojs/src/content/blog/pangolins-habitats/: index.mdx
examples/astrojs/src/content/blog/pangolins-interesting-facts/: index.mdx
examples/astrojs/src/content/blog/penguins-diet/: index.mdx
examples/astrojs/src/content/blog/penguins-habitats/: index.mdx
examples/astrojs/src/layouts/: Layout.astro  global.css
examples/astrojs/src/pages/posts/: [slug].astro
recommender/: blog_recommender.py
semantify/: interfaces.py  models.py  semantify.py  test_semantify.py
semantify/recommender/: blog_recommender.py
semantify/services/: openai.py  sqlite.py
semantify/summarizer/: qa_generator.py
semantify/utils/: download_sqlite_extensions.py  embedding_util.py  frontmatter_utils.py
services/: openai.py  sqlite.py
summarizer/: qa_generator.py
utils/: calculate_reading_time.py  embedding_util.py  frontmatter_utils.py
(+1 files in other folders)
